--- a/package.json
+++ b/package.json
@@ -20,14 +20,17 @@
     "@types/node": "^16.11.47",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "@types/react-html-parser": "^2.0.2",
     "antd": "^4.22.4",
     "axios": "^0.27.2",
     "babel-plugin-macros": "^3.1.0",
     "bootstrap": "^5.2.0",
     "formik": "^2.2.9",
+    "html-react-parser": "^3.0.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
+    "react-highlight-words": "^0.18.0",
     "react-hook-form": "^7.34.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
